Fixed text color on dark mode.

--- a/style2.css
+++ b/style2.css
@@ -16,11 +16,12 @@ table, td, th {
 }
 th {
     background-color: #D0FFAA ;
-    color: white;
+    color: #161616;
     padding: 20px;
 }
 td {
     padding: 10px;
+    color: #161616;
     text-align: center;
 }
 table {
